added media sizes

--- a/templates/italiapa/css/custom.css
+++ b/templates/italiapa/css/custom.css
@@ -61,29 +61,12 @@ ul.tags li:nth-child(n+2):before {
   display: block;
 }
 
-.map-responsive16by9 {
-  overflow:hidden;
-  padding-bottom:56.25%;
-  position:relative;
-  height:0;
-}
-
-.map-responsive4by3 {
-  overflow:hidden;
-  padding-bottom:75%;
-  position:relative;
-  height:0;
-}
-
 .map-responsive {
   overflow:hidden;
-  padding-bottom:25%;
   position:relative;
   height:0;
 }
 
-.map-responsive16by9 iframe,
-.map-responsive4by3 iframe,
 .map-responsive iframe {
   left:0;
   top:0;
@@ -93,8 +76,78 @@ ul.tags li:nth-child(n+2):before {
   pointer-events: none;
 }
 
-.map-responsive16by9 iframe.clicked,
-.map-responsive4by3 iframe.clicked,
 .map-responsive iframe.clicked {
 	pointer-events: auto;
+}
+
+@media screen and (max-width: 767px) {
+	.map-xs-responsive4by3 {
+		padding-bottom:75%;
+	}
+
+	.map-xs-responsive16by9 {
+		padding-bottom:56.25%;
+	}
+
+	.map-xs-responsive3by1 {
+		padding-bottom:33.33%;
+	}
+
+	.map-xs-responsive {
+		padding-bottom:25%;
+	}
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+	.map-sm-responsive4by3 {
+		padding-bottom:75%;
+	}
+
+	.map-sm-responsive16by9 {
+		padding-bottom:56.25%;
+	}
+
+	.map-sm-responsive3by1 {
+		padding-bottom:33.33%;
+	}
+
+	.map-sm-responsive {
+		padding-bottom:25%;
+	}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1365px) {
+	.map-md-responsive4by3 {
+		padding-bottom:75%;
+	}
+
+	.map-md-responsive16by9 {
+		padding-bottom:56.25%;
+	}
+
+	.map-md-responsive3by1 {
+		padding-bottom:33.33%;
+	}
+
+	.map-md-responsive {
+		padding-bottom:25%;
+	}
+}
+
+@media screen and (min-width: 1366px) {
+	.map-lg-responsive4by3 {
+		padding-bottom:75%;
+	}
+
+	.map-lg-responsive16by9 {
+		padding-bottom:56.25%;
+	}
+
+	.map-lg-responsive3by1 {
+		padding-bottom:33.33%;
+	}
+
+	.map-lg-responsive {
+		padding-bottom:25%;
+	}
 }
