--- a/templates/italiapa/css/custom.css
+++ b/templates/italiapa/css/custom.css
@@ -155,3 +155,13 @@ ul.tags li:nth-child(n+2):before {
 		padding-bottom:25%;
 	}
 }
+
+svg.Icon {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: currentColor;
+}
+
