--- a/templates/italiapa/css/custom.css
+++ b/templates/italiapa/css/custom.css
@@ -155,3 +155,66 @@ ul.tags li:nth-child(n+2):before {
 		padding-bottom:25%;
 	}
 }
+
+
+.Megamenu--default .Megamenu-item > span[class*=" Icon-"], 
+.Megamenu--default .Megamenu-item > span[class^=Icon-] {
+	color: #fff !important;
+}
+
+.Megamenu-item > span[class*=" Icon-"], 
+.Megamenu-item > span[class^=Icon-] {
+	padding-top: 1.6rem !important;
+}
+
+.Megamenu-item > span[class*=" Icon-"], 
+.Megamenu-item > span[class^=Icon-] {
+	padding-bottom: 1.6rem !important;
+}
+
+.Megamenu--default .Megamenu-item > span[class*=" Icon-"], 
+.Megamenu--default .Megamenu-item > span[class^=Icon-] {
+	font-size: 1.6rem !important;
+	letter-spacing: .01em !important;
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+	.Megamenu--default .Megamenu-item > span[class*=" Icon-"], 
+	.Megamenu--default .Megamenu-item > span[class^=Icon-] {
+		font-size: 1.8rem !important;
+		letter-spacing: .01em !important;
+	}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1365px) {
+	.Megamenu--default .Megamenu-item > span[class*=" Icon-"], 
+	.Megamenu--default .Megamenu-item > span[class^=Icon-] {
+		font-size: 1.8rem !important;
+		letter-spacing: .01em !important;
+	}
+}
+
+@media screen and (min-width: 1366px) {
+	.Megamenu--default .Megamenu-item > span[class*=" Icon-"], 
+	.Megamenu--default .Megamenu-item > span[class^=Icon-] {
+		font-size: 1.8rem !important;
+		letter-spacing: .01em !important;
+	}
+}
+
+.Megamenu-item span[class*=" Icon-"], 
+.Megamenu-item span[class^=Icon-] {
+	padding-right: 1rem !important;
+}
+
+.Megamenu-item > a {
+	padding-left: 0 !important;
+}
+
+.Megamenu-item > *:first-child {
+	padding-left: 1.6rem !important;
+}
+
+.Megamenu-item:first-child > *:first-child {
+	padding-left: 0 !important;
+}
