--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -368,3 +368,10 @@ header.Headroom .Megamenu-subnav {
 	border-left-color: #fff;
 	bottom: -10px;
 }
+
+.Header-socialIcons span[class*=" Icon-"], 
+.Header-socialIcons span[class^=Icon-] {
+	width: 1.5em;
+	height: 1.5em;
+}
+
