--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -405,3 +405,142 @@ header.Headroom .Megamenu-subnav {
 	padding-left: 0!important;
 	padding-right: 0!important;
 }
+
+.news-theme .owl-nav {
+    text-align: center;
+    -webkit-tap-highlight-color: transparent
+}
+
+.news-theme .owl-nav .owl-prev {
+    position: absolute;
+    top: 50%;
+    left: -1rem;
+    opacity: 0.2;
+    filter: alpha(opacity=20); /* For IE8 and earlier */
+}
+
+
+.news-theme .owl-nav .owl-next {
+    position: absolute;
+    top: 50%;
+    right: -1rem;
+    opacity: 0.2;
+    filter: alpha(opacity=20); /* For IE8 and earlier */
+}
+
+.news-theme .owl-nav .owl-next:hover,
+.news-theme .owl-nav .owl-prev:hover {
+    opacity: 1;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+.news-theme .owl-nav [class*='owl-'] {
+    color: #000;
+/*    font-size: 1.68em; */
+    font-size: 5rem!important;
+    margin: 0;
+    padding: 0;
+    background: 0;
+    display: inline-block;
+    cursor: pointer;
+    font-style: normal!important;
+    font-weight: normal!important;
+    font-variant: normal!important;
+    text-transform: none!important;
+    speak: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale
+}
+
+.news-theme .owl-nav [class*='owl-']:hover {
+    background: 0;
+    color: #000;
+    text-decoration: none
+}
+
+.news-theme .owl-nav .disabled {
+    opacity: .5;
+    cursor: default
+}
+
+.news-theme .owl-nav.disabled+.owl-dots {
+    margin-top: 10px
+}
+
+.news-theme .owl-dots {
+    text-align: center;
+    -webkit-tap-highlight-color: transparent
+}
+
+.news-theme .owl-dots .owl-dot {
+    display: inline-block;
+    zoom: 1;
+    *display: inline
+}
+
+.news-theme .owl-dots .owl-dot span {
+    width: 19px;
+    height: 19px;
+    margin: 0 4px;
+    background: #a5a5a5;
+    display: block;
+    -webkit-backface-visibility: visible;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    border: 3px solid #a5a5a5
+}
+
+.news-theme .owl-dots .owl-dot:hover span {
+    background: #fff
+}
+
+.news-theme .owl-dots .owl-dot.active span {
+    background: #fff;
+    border-color: #06c
+}
+
+dl.tabs {
+	float: left;
+	margin-bottom: -1px;
+}
+dl.tabs dt.tabs {
+	float: left;
+	margin-left: 3px;
+	padding: 4px 10px;
+	background-color: #F0F0F0;
+	border-top: 1px solid #CCC;
+	border-left: 1px solid #CCC;
+	border-right: 1px solid #CCC;
+}
+dl.tabs dt:hover {
+	background-color: #F9F9F9;
+}
+dl.tabs dt.open {
+	background-color: #FFF;
+	border-bottom: 1px solid #FFF;
+}
+dl.tabs dt.tabs h3 {
+	margin: 0;
+	font-size: 1.1em;
+	font-weight: normal;
+}
+dl.tabs dt.tabs h3 a {
+	color: #0088CC;
+}
+dl.tabs dt.tabs h3 a:hover {
+	color: #005580;
+	text-decoration: none;
+}
+dl.tabs dt.open h3 a {
+	color: #000;
+	text-decoration: none;
+}
+div.current dd.tabs {
+	margin: 0;
+	padding: 10px;
+	clear: both;
+	border: 1px solid #CCC;
+	background-color: #FFF;
+}
