--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -562,3 +562,7 @@ div.current dd.tabs {
 .Entrypoint-item.u-imageTitleNoWrap span.image-title {
 	white-space: nowrap;
 }
+
+button[role=tab] {
+	margin-right:1rem;
+}
