--- a/media/plg_system_ipatinymce/css/italiapa.css
+++ b/media/plg_system_ipatinymce/css/italiapa.css
@@ -479,12 +479,14 @@ iframe {
   border: 0;
 }
 
+/*
 ol,
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+*/
 
 /**
  * Suppress the focus outline on elements that cannot be accessed via keyboard.
