--- a/media/plg_system_ipatinymce/css/content.css
+++ b/media/plg_system_ipatinymce/css/content.css
@@ -225,3 +225,10 @@ dl.Timeline dt::before {
 	content: "\43" " ";
 	speak: none;
 }
+
+ol[style=""],
+ul[style=""] {	
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
