--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -760,3 +760,7 @@ footer input::-ms-input-placeholder { /* Microsoft Edge */
 .tooltip {
     z-index: 999999
 }
+
+.u-articleBodyHidden [itemprop=articleBody] {
+    display: none !important;
+}
