--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -768,7 +768,8 @@ footer input::-ms-input-placeholder { /* Microsoft Edge */
 	font-size: 13px;
 	display: inline-block;
 	margin-right: 1em;
-	margin-top: 1em;	font-weight: 600;
+	margin-top: 1em;
+	font-weight: 600;
 	padding: .6em 1.2em;
 	text-transform: uppercase;
 	-ms-touch-action: manipulation;
