--- a/media/plg_system_ipatinymce/css/content.css
+++ b/media/plg_system_ipatinymce/css/content.css
@@ -232,3 +232,108 @@ ul[style=""] {
   margin: 0;
   padding: 0;
 }
+
+ul.Linklist .osmap-item-heading {
+  display: block !important;
+  padding-top: 1em !important;
+  padding-bottom: 1em !important;
+  text-decoration: none !important;
+}
+ul.circle {
+  list-style-type: circle;
+}
+ul.disc {
+  list-style-type: disc;
+}
+ul.square {
+  list-style-type: square;
+}
+ol.armenian {
+  list-style-type: armenian;
+}
+ol.cjk-ideographic {
+  list-style-type: cjk-ideographic;
+}
+ol.decimal {
+  list-style-type: decimal;
+}
+ol.decimal-leading-zero {
+  list-style-type: decimal-leading-zero;
+}
+ol.georgian {
+  list-style-type: georgian;
+}
+ol.hebrew {
+  list-style-type: hebrew;
+}
+ol.hiragana {
+  list-style-type: hiragana;
+}
+ol.hiragana-iroha {
+  list-style-type: hiragana-iroha;
+}
+ol.katakana {
+  list-style-type: katakana;
+}
+ol.katakana-iroha {
+  list-style-type: katakana-iroha;
+}
+ol.lower-alpha {
+  list-style-type: lower-alpha;
+}
+ol.lower-greek {
+  list-style-type: lower-greek;
+}
+ol.lower-latin {
+  list-style-type: lower-latin;
+}
+ol.lower-roman {
+  list-style-type: lower-roman;
+}
+ol.upper-alpha {
+  list-style-type: upper-alpha;
+}
+ol.upper-greek {
+  list-style-type: upper-greek;
+}
+ol.upper-latin {
+  list-style-type: upper-latin;
+}
+ol.upper-roman {
+  list-style-type: upper-roman;
+}
+ol.none {
+  list-style-type: none;
+}
+ol.inherit {
+  list-style-type: inherit;
+}
+ul.circle,
+ul.disc,
+ul.square,
+ol.armenian,
+ol.cjk-ideographic,
+ol.decimal,
+ol.decimal-leading-zero,
+ol.georgian,
+ol.hebrew,
+ol.hiragana,
+ol.hiragana-iroha,
+ol.katakana,
+ol.katakana-iroha,
+ol.lower-alpha,
+ol.lower-greek,
+ol.lower-latin,
+ol.lower-roman,
+ol.upper-alpha,
+ol.upper-greek,
+ol.upper-latin,
+ol.upper-roman,
+ol.none,
+ol.inherit {
+  margin-block-end: 18px;
+  margin-block-start: 18px;
+  margin-inline-end: 0px;
+  margin-inline-start: 0px;
+  padding-inline-start: 40px;
+}
