--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -474,9 +474,28 @@ header.Headroom .Megamenu-subnav {
 	overflow: hidden;
 }
 
+.heronews-theme .owl-nav,
 .news-theme .owl-nav {
 	text-align: center;
 	-webkit-tap-highlight-color: transparent
+}
+
+.heronews-theme .owl-nav .owl-prev {
+	position: absolute;
+	top: 50%;
+	left: 2rem;
+	opacity: 0.8;
+	filter: alpha(opacity=80); /* For IE8 and earlier */
+	filter: invert(1);
+}
+
+.heronews-theme .owl-nav .owl-next {
+	position: absolute;
+	top: 50%;
+	right: 2rem;
+	opacity: 0.8;
+	filter: alpha(opacity=80); /* For IE8 and earlier */
+	filter: invert(1);
 }
 
 .news-theme .owl-nav .owl-prev {
@@ -487,7 +506,6 @@ header.Headroom .Megamenu-subnav {
 	filter: alpha(opacity=20); /* For IE8 and earlier */
 }
 
-
 .news-theme .owl-nav .owl-next {
 	position: absolute;
 	top: 50%;
@@ -496,12 +514,15 @@ header.Headroom .Megamenu-subnav {
 	filter: alpha(opacity=20); /* For IE8 and earlier */
 }
 
+.heronews-theme .owl-nav .owl-next:hover,
+.heronews-theme .owl-nav .owl-prev:hover,
 .news-theme .owl-nav .owl-next:hover,
 .news-theme .owl-nav .owl-prev:hover {
 	opacity: 1;
 	filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
+.heronews-theme .owl-nav [class*='owl-'],
 .news-theme .owl-nav [class*='owl-'] {
 	color: #000;
 /*	font-size: 1.68em; */
@@ -521,12 +542,14 @@ header.Headroom .Megamenu-subnav {
 	-moz-osx-font-smoothing: grayscale
 }
 
+.heronews-theme .owl-nav [class*='owl-']:hover,
 .news-theme .owl-nav [class*='owl-']:hover {
 	background: 0;
 	color: #000;
 	text-decoration: none
 }
 
+.heronews-theme .owl-nav .disabled,
 .news-theme .owl-nav .disabled {
 	opacity: .5;
 	cursor: default
@@ -536,17 +559,20 @@ header.Headroom .Megamenu-subnav {
 	margin-top: 10px
 }
 
+.heronews-theme .owl-dots,
 .news-theme .owl-dots {
 	text-align: center;
 	-webkit-tap-highlight-color: transparent
 }
 
+.heronews-theme .owl-dots .owl-dot,
 .news-theme .owl-dots .owl-dot {
 	display: inline-block;
 	zoom: 1;
 	*display: inline
 }
 
+.heronews-theme .owl-dots .owl-dot span,
 .news-theme .owl-dots .owl-dot span {
 	width: 19px;
 	height: 19px;
@@ -560,10 +586,13 @@ header.Headroom .Megamenu-subnav {
 	border: 3px solid #a5a5a5
 }
 
+.heronews-theme .owl-dots .owl-dot:hover span,
 .news-theme .owl-dots .owl-dot:hover span {
 	background: #fff
 }
 
+
+.heronews-theme .owl-dots .owl-dot.active span,
 .news-theme .owl-dots .owl-dot.active span {
 	background: #fff;
 	border-color: #06c
