--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -971,7 +971,12 @@ dl.stats-module dd {
     margin-left: 0!important;
 }
 
-Megamenu li span.image-title {
-    margin-left: 0.5em;
+.Megamenu ul.Megamenu-subnavGroup {
+    position: relative;
+}
+
+.Megamenu ul.Megamenu-subnavGroup ul span.image-title {
+    position: absolute;
+    left: 24px;
 }
 
