--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -2259,3 +2259,10 @@ dl.stats-module dd {
   float: right;
   width: 50%;
 }
+.chzn-container-active.chzn-with-drop .chzn-single,
+.chzn-container-single .chzn-single {
+    background: none;
+    border: 0;
+    box-shadow: none;
+    padding: 0;
+}
