--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -2221,6 +2221,13 @@ footer input::-ms-input-placeholder {
   padding-bottom: 0.8em !important;
   padding-top: 0.8em !important;
 }
+.Header-owner > * {
+  font-size:1.4rem!important;
+  padding-left:0.2em;
+  padding-right:0.2em;
+}
+
+
 /* SPiD */
 @media screen and (max-width: 991px) {
   .italia-it-button-size-m {
@@ -2382,6 +2389,7 @@ dl.stats-module dd {
     border: 0;
     box-shadow: none;
     padding: 0;
+}
 .ipa-copyright {
 	position:unset!important;
 	display:block!important;
