--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -2427,17 +2427,17 @@ dl.stats-module dd {
 }
 
 /* category view services */
-body.services #main :has(>section.services[itemtype="https://schema.org/Blog"]) {
-  margin-left: 0!important;
-  margin-right: 0!important;
-  max-width: 100%!important;
-  padding-left: 0!important;
-  padding-right: 0!important;
+body.services #main :has( > section.services[itemtype="https://schema.org/Blog"]) {
+	margin-left: 0!important;
+	margin-right: 0!important;
+	max-width: 100%!important;
+	padding-left: 0!important;
+	padding-right: 0!important;
 }
-body.services #main section.services>div:not(.u-layout-wide.u-layoutCenter) {
-  background-color: #eee;
+body.services #main section.services[itemtype="https://schema.org/Blog"] > div:not(.u-layout-wide.u-layoutCenter) {
+	background-color: #eee;
 }
 body.services #featured {
-  padding-left: 0!important;
-  padding-right: 0!important;
+	padding-left: 0!important;
+	padding-right: 0!important;
 }
