fix: profile form

--- a/templates/italiapa/css/italiapa.css
+++ b/templates/italiapa/css/italiapa.css
@@ -2571,3 +2571,12 @@ body.services #featured {
   top: 5px !important;
   z-index: 39 !important;
 }
+.Form-field .chzn-container-single .chzn-single {
+  height: inherit!important;
+  line-height: inherit!important;
+}
+.Form-field.disabled,
+.Form-input[readonly][required] {
+  opacity: 0.5;
+  cursor: default;
+}
