--- a/plugins/system/italiapa/forms/com_users_login_default.xml
+++ b/plugins/system/italiapa/forms/com_users_login_default.xml
@@ -13,7 +13,8 @@
 				type="list"
 				label="PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_LABEL"
 				description="PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_DESC"
-				default="1">
+				default="">
+				<option value="">JGLOBAL_USE_GLOBAL</option>
 				<option value="0">JNONE</option>
 				<option value="1">PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_FIRST</option>
 				<option value="2">PLG_SYSTEM_ITALIAPA_LOGIN_JOOMLA_LAST</option>
